deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: helloapp
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: helloapp
